--- a/generator-final.html
+++ b/generator-final.html
@@ -45,7 +45,7 @@
         // =======================================================================
         // ==> PASTE URL WEB APP BARU ANDA DARI GOOGLE APPS SCRIPT DI SINI <==
         // =======================================================================
-        const WEB_APP_URL = 'PASTE_YOUR_NEW_GOOGLE_SHEET_WEB_APP_URL_HERE';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwiG5LqRFf0FOo3fITEyinm-dkeiEYkZ75yaXWMqYpgeykudE4wZ797h7R_X1pOXgxc/exec';
         // =======================================================================
 
         document.addEventListener('DOMContentLoaded', function() {
